--- a/GigOficial3/GigOficial3/Views/Gigs/Create.cshtml
+++ b/GigOficial3/GigOficial3/Views/Gigs/Create.cshtml
@@ -28,3 +28,7 @@
     </div>
     <button type="submit" class="btn btn-primary">Save</button> 
 }
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
+}
